--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
-                <ul class="nav nav-pills d-block d-md-flex">
+                <ul class="nav nav-pills d-block d-md-flex d-flex justify-content-between align-items-center flex-wrap">
                     <li class="nav-item fw-bold">
                         <a href="#sobre-o-pet" class="nav-link fs-5">
-                            <i class="bi bi-house-door me-1"></i>
+                            <i class="me-1"></i>
                             Cães
                         </a>
                     </li>
                     <li class="nav-item fw-bold">
                         <a href="#sobre-o-pet" class="nav-link fs-5">
-                            <i class="bi bi-house-door me-1"></i>
+                            <i class="me-1"></i>
                             Gatos
                         </a>
                     </li>
                     <li class="nav-item fw-bold">
                         <a href="#sobre-o-pet" class="nav-link fs-5">
-                            <i class="bi bi-house-door me-1"></i>
+                            <i class="me-1"></i>
                             Outros Pets
                         </a>
                     </li>
                     <li class="nav-item fw-bold">
                         <a href="#sobre-o-pet" class="nav-link fs-5">
-                            <i class="bi bi-house-door me-1"></i>
+                            <i class="me-1"></i>
                             Seus Pedidos
                         </a>
                     </li>
@@ -125,8 +125,7 @@
                     </h3>          
                 </div>
             </div>
-        </section>
-        <section id="produtos" class="pt-3 pb-3"></section>        </section>
+        </section>      
         <section id="especialidades">
             <div class="container">
                 <div class="row">
@@ -137,10 +136,10 @@
                 <div class="row">
                     <aside class="col-md-3 fs-5">
                         <nav class="nav nav-pills flex-column">
-                            <button type="button" data-bs-toggle="tab" data-bs-target="#recomendados" class="nav-link fw-bold text-start text-colored active">Produtos recomendados</button>
-                            <button type="button" data-bs-toggle="tab" data-bs-target="#caes" class="nav-link fw-bold text-start text-colored">Preferidos dos seus Cães</button>
-                            <button type="button" data-bs-toggle="tab" data-bs-target="#gatos" class="nav-link fw-bold text-start text-colored">Preferidos dos seus Gatos</button>
-                            <button type="button" data-bs-toggle="tab" data-bs-target="#marcas" class="nav-link fw-bold text-start text-colored">Principais Marcas</button>                      
+                            <button type="button" data-bs-toggle="tab" data-bs-target="#recomendados" class="nav-link text-custon text-start text-colored active">Produtos recomendados</button>
+                            <button type="button" data-bs-toggle="tab" data-bs-target="#caes" class="nav-link text-custon fw-bold text-start text-colored">Preferidos dos seus Cães</button>
+                            <button type="button" data-bs-toggle="tab" data-bs-target="#gatos" class="nav-link text-custon fw-bold text-start text-colored">Preferidos dos seus Gatos</button>
+                            <button type="button" data-bs-toggle="tab" data-bs-target="#marcas" class="nav-link text-custon fw-bold text-start text-colored mb-4">Principais Marcas</button>                      
                         </nav>
                     </aside>
                 </div>
@@ -148,37 +147,37 @@
                     <div class="tab-content">
                         <div class="tab-pane active" id="recomendados">
                             <div class="row">
-                                <div class="col-md-3 text-custon">
-                                    <img src="./imgs/sections/racaodog1.jpg" alt="" class="d-block w-100 rounded mb-2">
+                                <div class="col-md-3">
+                                    <img src="./imgs/sections/racaodog1.jpg" alt="" class="img-fluid md-3 rounded img-custon">
                                     <h3 class="fs-4">
                                         Ração para Cães
                                     </h3>
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae mollitia repellendus at excepturi repudiandae</p>
                                 </div>
-                                <div class="col-md-3 text-custon">
-                                    <img src="./imgs/sections/racaocat1.jpg" alt="" class="d-block w-100 rounded mb-2">
+                                <div class="col-md-3">
+                                    <img src="./imgs/sections/racaocat1.jpg" alt="" class="img-fluid md-3 rounded img-custon">
                                     <h3 class="fs-4">
                                         Ração para Gatos
                                     </h3>
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae mollitia repellendus at excepturi repudiandae</p>
                                 </div>
-                                <div class="col-md-3 text-custon">
-                                    <img src="./imgs/sections/racaoave1.jpg" alt="" class="d-block w-100 rounded mb-2">
+                                <div class="col-md-3">
+                                    <img src="./imgs/sections/racaoave1.jpg" alt="" class="img-fluid md-3 rounded img-custon">
                                     <h3 class="fs-4">
                                         Ração para Aves
                                     </h3>
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae mollitia repellendus at excepturi repudiandae</p>
                                 </div>
-                                <div class="col-md-3 text-custon">
-                                    <img src="./imgs/sections/toycat1.jpg" alt="" class="d-block w-100 rounded mb-2">
+                                <div class="col-md-3">
+                                    <img src="./imgs/sections/toycat1.jpg" alt="" class="img-fluid md-3 rounded img-custon">
                                     <h3 class="fs-4">
                                         Brinquedoteca
                                     </h3>
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae mollitia repellendus at excepturi repudiandae</p>
                                 </div>
-                                <div class="col-md-3 text-custon">
-                                    <img src="./imgs/sections/hamster1.jpg" alt="" class="d-block w-100 rounded mb-2">
-                                    <h3 class="fs-4">
+                                <div class="col-md-3">
+                                    <img src="./imgs/sections/hamster1.jpg" alt="" class="img-fluid md-3 rounded img-custon">
+                                    <h3 class="fs-4 ">
                                         Outros Pets
                                     </h3>
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae mollitia repellendus at excepturi repudiandae</p>
@@ -187,15 +186,15 @@
                         </div>
                         <div class="tab-pane" id="caes">
                             <div class="row">
-                                <div class="col-md-3 text-custon">
-                                    <img src="./imgs/sections/racaodog2.jpg" alt="" class="d-block w-100 rounded mb-2">
+                                <div class="col-md-3">
+                                    <img src="./imgs/sections/racaodog2.jpg" alt="" class="img-fluid md-3 rounded img-custon">
                                     <h3 class="fs-4">
                                         Ração para Cães
                                     </h3>
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae mollitia repellendus at excepturi repudiandae</p>
                                 </div>
-                                <div class="col-md-3 text-custon">
-                                    <img src="./imgs/sections/toydog2.jpg" alt="" class="d-block w-100 rounded mb-2">
+                                <div class="col-md-3">
+                                    <img src="./imgs/sections/toydog2.jpg" alt="" class="img-fluid md-3 rounded img-custon">
                                     <h3 class="fs-4">
                                         Brinquedos para Cães
                                     </h3>
@@ -205,15 +204,15 @@
                         </div>
                         <div class="tab-pane" id="gatos">
                             <div class="row">
-                                <div class="col-md-3 text-custon">
-                                    <img src="./imgs/sections/racaocat2.jpg" alt="" class="d-block w-100 rounded mb-2">
+                                <div class="col-md-3">
+                                    <img src="./imgs/sections/racaocat2.jpg" alt="" class="img-fluid md-3 rounded img-custon">
                                     <h3 class="fs-4">
                                         Ração para Gatos
                                     </h3>
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae mollitia repellendus at excepturi repudiandae</p>
                                 </div>
-                                <div class="col-md-3 text-custon">
-                                    <img src="./imgs/sections/toycat2.jpg" alt="" class="d-block w-100 rounded mb-2">
+                                <div class="col-md-3">
+                                    <img src="./imgs/sections/toycat2.jpg" alt="" class="img-fluid md-3 rounded img-custon">
                                     <h3 class="fs-4">
                                         Notebok
                                     </h3>
@@ -223,22 +222,22 @@
                         </div>
                         <div class="tab-pane" id="marcas">
                             <div class="row">
-                                <div class="col-md-3 text-custon">
-                                    <img src="./imgs/sections/marcas1.jpg" alt="" class="d-block w-100 rounded mb-2">
+                                <div class="col-md-3">
+                                    <img src="./imgs/sections/marcas1.jpg" alt="" class="img-fluid md-3 rounded img-custon">
                                     <h3 class="fs-4">
                                         Marca1
                                     </h3>
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae mollitia repellendus at excepturi repudiandae</p>
                                 </div>
-                                <div class="col-md-3 text-custon">
-                                    <img src="./imgs/sections/marcas2.jpg" alt="" class="d-block w-100 rounded mb-2">
+                                <div class="col-md-3">
+                                    <img src="./imgs/sections/marcas2.jpg" alt="" class="img-fluid md-3 rounded img-custon">
                                     <h3 class="fs-4">
                                         Marca2
                                     </h3>
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae mollitia repellendus at excepturi repudiandae</p>
                                 </div>
-                                <div class="col-md-3 text-custon">
-                                    <img src="./imgs/sections/marcas3.jpg" alt="" class="d-block w-100 rounded mb-2">
+                                <div class="col-md-3">
+                                    <img src="./imgs/sections/marcas3.jpg" alt="" class="img-fluid md-3 rounded img-custon">
                                     <h3 class="fs-4">
                                         Marca3
                                     </h3>
@@ -256,45 +255,48 @@
                     <h2 class="section-title text-center">Fale <span class="text-colored">conosco</span></h2>
                 </div>
                 <div class="row">
-                    <div class="col-md-7 mb-5">
-                        <form>
+                    <div class="col-md-6 mb-5">
+                        <form id="formulario">
                             <div class="mb-3">
                                 <label for="nome" class="form-label fw-bold text-colored">Seu nome</label>
                                 <input type="text" id="nome" class="form-control" required>
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label fw-bold text-colored">Seu e-mail</label>
-                                <input type="email" id="nome" class="form-control" required>
+                                <input type="email" id="email" class="form-control" required>
                             </div>
                             <div class="mb-3">
                                 <label for="telefone" class="form-label fw-bold text-colored">Seu telefone (opcional)</label>
-                                <input type="tel" id="nome" class="form-control">
+                                <input type="tel" id="telefone" class="form-control" max="15" placeholder="(DDD) TELEFONE">
                             </div>
                             <div class="mb-3">
-                                <label for="mensagem" class="form-label fw-bold text-colored">Sua mensagem</label>
-                                <textarea class="form-control" id="mensagem" required></textarea>
+                                <label for="mensagem" class="form-label fw-bold text-colored">Sua mensagem (máximo 200 caracteres)</label>
+                                <textarea class="form-control" id="mensagem" maxlength="200"></textarea>
                             </div>
-                            <button type="submit" class="btn fw-bold">Enviar</button>
+                            <button type="submit" class="btn btn-primary fw-bold">Enviar</button>
                         </form>
                     </div> 
                     <div class="col-md-5">
                         <div class="row">
-                            <h3 class="section-title fs-4 text-colored">
-                                <i class="bi bi-hand-thumbs-up-fill"></i>
+                            <h3 class="section-title fs-4 text-colored mt-4">
+                                <i class= bi-hand-thumbs-up-fill"></i>
                                 Redes Sociais
                             </h3>
                             <ul class="social-links">
-                                <li class="fs-5">
+                                <li class="fs-5 list-unstyled">
                                     <a href="#"></a>
                                         <i class="bi bi-facebook text-colored"></i>
+                                        Facebook
                                 </li>
-                                <li class="fs-5 ms-1 me-1" >
+                                <li class="fs-5 list-unstyled" >
                                     <a href="#"></a>
                                         <i class="bi bi-instagram text-colored"></i>
+                                        Instagram
                                 </li>
-                                <li class="fs-5">
+                                <li class="fs-5 list-unstyled">
                                     <a href="#"></a>
                                         <i class="bi bi-whatsapp text-colored"></i>
+                                        Youtube
                                 </li>
                             </ul>
                         </div>
@@ -311,9 +313,13 @@
                 </div>
             </div>
         </section>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/jquery.mask.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/messages_pt_BR.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
-
-<!--NAV-LINK TA METENDO A COR BRANCA FAVOR VERIFICAR-->
